kubernetes/react-website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-website
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: react-website
  type: ClusterIP
