kubernetes/react-website/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: react-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: react-website
      http:
        paths:
          - backend:
              serviceName: react-website
              servicePort: http
            path: /
